--- a/CustomView/app/src/main/res/values/strings.xml
+++ b/CustomView/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CustomView</string>
+    <string name="flow_activity_name">FlowActivity</string>
     <string name="action_settings">Settings</string>
 </resources>
