--- a/CustomView/app/src/main/res/values/strings.xml
+++ b/CustomView/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="flow_activity_name">FlowActivity</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_carousel_view">CarouselViewActivity</string>
-    <string name="title_activity_carousel_view">CarouselViewActivity</string>
+    <string name="title_activity_animation_view">RxjavaAnimation</string>
 </resources>
