--- a/MyTodo/app/src/main/res/values/strings.xml
+++ b/MyTodo/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="navigation_view_header_title">TO-DOs</string>
+    <string name="list_title">TO-DO List</string>
+    <string name="statistics_title">Statistics</string>
 </resources>
