--- a/LayoutInflaterDemo/app/src/main/res/values/strings.xml
+++ b/LayoutInflaterDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">LayoutInflaterDemo</string>
     <string name="hello_world">Hello World</string>
+    <string name="btn_getSize">获得图像大小</string>
 </resources>
